--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "formik": "^2.0.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "reactstrap": "^8.1.1",
     "semantic-ui-css": "^2.4.1",
